reeturanLock代码解读优化